--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
-[package]
-name = "learning-rust"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tokio = { version = "1", features = ["full"] }
+members = [
+    "language"
+]
