--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,12 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        - version: '3.x'
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
