--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install Protoc
       uses: arduino/setup-protoc@v1
       with:
-        - version: '3.x'
+        version: '3.x'
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
